Entity framework core package tables and connections

--- a/CrudContatos/Views/Contato/ApagarConfirmacao.cshtml
+++ b/CrudContatos/Views/Contato/ApagarConfirmacao.cshtml
@@ -7,5 +7,5 @@
 </div>
 <div class="text-center">
 <a class="btn btn-outline-primary btn-lg btn-block" role="button" asp-controller="Contato" asp-action="Index">Cancelar</a>
-<a class="btn btn-outline-danger btn-lg btn-block" role="button">Excluir</a>
+<a class="btn btn-outline-danger btn-lg btn-block" role="button" asp-controller="Contato" asp-action="Apagar" >Excluir</a>
 </div>
