--- a/CrudContatos/Views/Contato/Criar.cshtml
+++ b/CrudContatos/Views/Contato/Criar.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model ContatoModel
+@{
     ViewData["Title"] = "Adicionar contato";
 }
 
@@ -8,21 +9,21 @@
 
 </div>
 
-<form>
+<form asp-controller="Contato" asp-action="Criar" method="post" >
 
     <div class="form-group">
-        <label for="nome">Nome</label>
-        <input type="text" class="form-control" placeholder="Digite o nome do contato">
+        <label for="Nome">Nome</label>
+        <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome do contato">
     </div>
 
     <div class="form-group">
-        <label for="email">E-mail</label>
-        <input type="text" class="form-control" placeholder="Digite o email do contato">
+        <label for="Email">E-mail</label>
+        <input type="text" asp-for="Email" class="form-control" placeholder="Digite o email do contato">
     </div>
 
     <div class="form-group">
-        <label for="telefone">Numero de telefone</label>
-        <input type="text" class="form-control" placeholder="Digite o numero de telefone do contato">
+        <label for="Celular">Numero de telefone</label>
+        <input type="text" asp-for="Celular" class="form-control" placeholder="Digite o numero de telefone do contato">
     </div>
 <br />
     <button type="submit" class="btn btn-outline-primary">Adicionar</button>
