--- a/CrudContatos/Views/Contato/Index.cshtml
+++ b/CrudContatos/Views/Contato/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model List<ContatoModel>
+@{
     ViewData["Title"] = "Lista de contatos";
 }
 
@@ -21,42 +22,24 @@
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto@email.com</td>
-            <td>62 22222-3333</td>
-            <td>
-                <div class="btn-group" role="group">
-                    <a role="button" class="btn btn-outline-primary" asp-controller="Contato" asp-action="Editar" >Editar</a>
-                        <a role="button" class="btn btn-outline-danger" asp-controller="Contato" asp-action="ApagarConfirmacao" >Excluir</a>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton@email.com</td>
-            <td>62 22222-3333</td>
-            <td>
-                <div class="btn-group" role="group">
-                        <a role="button" class="btn btn-outline-primary" asp-controller="Contato" asp-action="Editar" >Editar</a>
-                        <a role="button" class="btn btn-outline-danger" asp-controller="Contato" asp-action="ApagarConfirmacao" >Excluir</a>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <th scope="row">3</th>
-            <td>Larry the Bird</td>
-            <td>Larry@email.com</td>
-            <td>62 22222-3333</td>
-            <td>
-                <div class="btn-group" role="group">
-                        <a role="button" class="btn btn-outline-primary" asp-controller="Contato" asp-action="Editar" >Editar</a>
-                        <a role="button" class="btn btn-outline-danger" asp-controller="Contato" asp-action="ApagarConfirmacao" >Excluir</a>
-                </div>
-            </td>
-        </tr>
+       @if(Model != null && Model.Any())
+       {
+           foreach (ContatoModel contato in Model)
+           {
+                    <tr>
+                        <th scope="row">@contato.Id</th>
+                        <td>@contato.Nome</td>
+                        <td>@contato.Email</td>
+                        <td>@contato.Celular</td>
+                        <td>
+                            <div class="btn-group" role="group">
+                                <a role="button" class="btn btn-outline-primary" asp-route-id="@contato.Id" asp-controller="Contato" asp-action="Editar">Editar</a>
+                                <a role="button" class="btn btn-outline-danger" asp-route-id="@contato.Id" asp-controller="Contato" asp-action="ApagarConfirmacao">Excluir</a>
+                            </div>
+                        </td>
+                    </tr>
+           }
+       }
     </tbody>
 </table>
 </div>
