contact editing done

--- a/CrudContatos/Views/Contato/Editar.cshtml
+++ b/CrudContatos/Views/Contato/Editar.cshtml
@@ -9,8 +9,9 @@
 
 </div>
 
-<form asp-controller ="Contato" asp-action="Editar" method="post">
+<form asp-controller ="Contato" asp-action="Alterar" method="post">
 
+    <input type="hidden" asp-for="Id"/>
     <div class="form-group">
         <label for="Nome">Nome</label>
         <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome do contato">
