Contact deletion method

--- a/CrudContatos/Views/Contato/ApagarConfirmacao.cshtml
+++ b/CrudContatos/Views/Contato/ApagarConfirmacao.cshtml
@@ -1,11 +1,12 @@
-﻿@{
+﻿@model ContatoModel
+@{
     ViewData["Title"] = "Confirmação apagar o contato";
 }
 
 <div class="text-center">
-    <h3>Deseja apagar o contato (contato) ?</h3>
+    <h3>Deseja apagar o contato @Model.Nome ?</h3>
 </div>
 <div class="text-center">
 <a class="btn btn-outline-primary btn-lg btn-block" role="button" asp-controller="Contato" asp-action="Index">Cancelar</a>
-<a class="btn btn-outline-danger btn-lg btn-block" role="button" asp-controller="Contato" asp-action="Apagar" >Excluir</a>
+<a class="btn btn-outline-danger btn-lg btn-block" role="button" asp-controller="Contato" asp-action="Apagar" asp-route-id="@Model.Id">Excluir</a>
 </div>
