--- a/CrudContatos/Views/Contato/Criar.cshtml
+++ b/CrudContatos/Views/Contato/Criar.cshtml
@@ -14,16 +14,19 @@
     <div class="form-group">
         <label for="Nome">Nome</label>
         <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome do contato">
+        @Html.ValidationMessageFor(x => x.Nome)
     </div>
 
     <div class="form-group">
         <label for="Email">E-mail</label>
         <input type="text" asp-for="Email" class="form-control" placeholder="Digite o email do contato">
+        @Html.ValidationMessageFor(x => x.Email)
     </div>
 
     <div class="form-group">
         <label for="Celular">Numero de telefone</label>
         <input type="text" asp-for="Celular" class="form-control" placeholder="Digite o numero de telefone do contato">
+        @Html.ValidationMessageFor(x => x.Celular)
     </div>
 <br />
     <button type="submit" class="btn btn-outline-primary">Adicionar</button>
