--- a/CrudContatos/wwwroot/css/site.css
+++ b/CrudContatos/wwwroot/css/site.css
@@ -22,3 +22,12 @@ body {
     background-color: silver;
     border-radius: 3px;
 }
+
+.close-alert {
+    position: absolute;
+    right: -10px;
+    top: -15px;
+    border-radius: 15px;
+    width: 30px;
+    height: 31px;
+}
