Adding search and filter

--- a/CrudContatos/Views/Contato/Index.cshtml
+++ b/CrudContatos/Views/Contato/Index.cshtml
@@ -29,7 +29,7 @@
 
 <h1 class="display-4 text-center">Lista de contatos</h1>
 
-<table class="table table-striped">
+<table class="table table-striped" id="table-contatos">
     <thead>
         <tr>
             <th scope="col">ID</th>
